--- a/casestudies.html
+++ b/casestudies.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Home</title>
+    <title>Case Studies</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,14 +18,8 @@
     </nav>
 
     <div class="centered">
-        <h1>Hi there 👋 I'm Valerie Jones</h1>
-        <h3>Data Scientist</h3>
-        <p>I am currently in my final year of studying Mathematics at University of Bath, and looking to pursue a career in data science.</p>
-        <!--<img src="frontpageimage.png" alt="Profile Image">-->
-        <a class="nav-button" href="valerie-jones-curriculum-vitae.pdf" download>Download CV</a>
+        <h1>Case Studies Page</h1>
+        <p>Content coming soon!</p>
     </div>
-
-    <div class="shape"></div>
 </body>
 </html>
-
