--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="blob-dark"></div>
+    <div class="blob-light"></div>
     <nav>
         <div class="logo">VJ</div>
         <ul>
@@ -17,15 +19,18 @@
         <a class="nav-button" href="casestudies.html">Case Studies</a>
     </nav>
 
-    <div class="centered">
-        <h1>Hi there 👋 I'm Valerie Jones</h1>
-        <h3>Data Scientist</h3>
-        <p>I am currently in my final year of studying Mathematics at University of Bath, and looking to pursue a career in data science.</p>
-        <!--<img src="frontpageimage.png" alt="Profile Image">-->
-        <a class="nav-button" href="valerie-jones-curriculum-vitae.pdf" download>Download CV</a>
-    </div>
-
-    <div class="shape"></div>
+    <main class="hero">
+        <div class="hero-content">
+            <h1>Hi there 👋 I’m Valerie</h1>
+            <p>
+            Welcome to my portfolio website. Check out the relevant tabs or download my CV below.<br>
+            This is my development website built from scratch - no vibe coding,
+            no online templates just something simple to learn
+            web develeopment.<br>
+            </p>
+            <a class="nav-button" href="valerie-jones-curriculum-vitae.pdf" download>Download CV</a>
+        </div>
+    </main>
 </body>
 </html>
 
