--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
     </nav>
 
     <main class="hero">
-        <div class="hero-content">
+        <div class="hero-box">
             <h1>Hi there 👋 I’m Valerie</h1>
             <p>
             Welcome to my portfolio website. Check out the relevant tabs or download my CV below.<br>
             This is my development website built from scratch - no vibe coding,
-            no online templates just something simple to learn
-            web develeopment.<br>
+            no online templates, just something simple to help me learn web development.<br>
             </p>
             <a class="nav-button" href="valerie-jones-curriculum-vitae.pdf" download>Download CV</a>
         </div>
